Changes in Finalizador.java